# ogthinkex

./: .gitignore  README.md  tester.html
api/: .env  .env.example  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 10bc03410ec2_initial_migration.py
api/database/: __init__.py  config.py  connection.py  service.py
api/models/: __init__.py  api_models.py  database_models.py
api/routes/: __init__.py  ably_routes.py  cluster_routes.py
api/services/: __init__.py  ably_manager.py
web/: .env.client  .gitignore  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.json
web/.netlify/functions/ably-token-request/: index.ts  package.json
web/src/: config.ts
web/src/components/: ClusterListWrapper.astro  KnowledgeGraph.tsx  KnowledgeGraphWrapper.astro  LoadingState.astro  Navigation.astro  Welcome.astro
web/src/components/ClusterList/: BreadcrumbBar.tsx  ClusterListProviders.tsx  ClusterListWithWebSocket.tsx  ClusterListWrapper.tsx  DeleteConfirmationModal.tsx  FlashcardCard.tsx  FlashcardModal.tsx  KanbanColumn.tsx  QACard.tsx  QAModal.tsx  ResearchCard.tsx  ResearchModal.tsx  Sidebar.tsx  SourceNoteCard.tsx  SourceNoteModal.tsx  index.ts
web/src/components/KnowledgeGraph/: BreadcrumbBar.tsx  ContextDrawer.tsx  ContextToolbar.tsx  DeleteConfirmationModal.tsx  index.ts  (+11 more)
web/src/contexts/: WebSocketContext.tsx
web/src/hooks/: use-animation.ts  useAllClusterLists.ts  useDragReorder.ts
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  knowledge-graph.astro
web/src/styles/: global.css
(+4 files in other folders)
